# what_are_embeddings

./: pyproject.toml
notebooks/: contextualizing_embedding.html  contextualizing_embedding.ipynb
