[tool.poetry]
name = "what-are-embeddings"
version = "0.1.0"
description = ""
authors = ["Hamid Adesokan <aadehamid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
transformers = "^4.44.0"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"
gensim = "^4.3.3"
spacy = "^3.7.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
